@@ -42,7 +42,7 @@ Building Hypermail:
         Solaris 2.5.x, SunOS 4.1.3, FreeBSD 2.2.5, FreeBSD 3.0-RELEASE,
         BSDI/3.x, Linux kernel 2.0.18 and 2.0.30, Redhat 5.x && 6.x,
         NT using CygWin-b19 <http://www.cygnus.com/misc/gnu-win32>,
-        Irix6.2, HP-UX 10.20, SCO OS 5.0.5
+        Irix6.2, HP-UX 10.20, SCO OS 5.0.5, and TRU64/OSF1 on a DEC Alpha
 
    For more information on Cygwin and build hypermail on a Windows-based 
    system, see the file docs/Install-win32.txt.  
